# study-cpp

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  cmakelists.txt  cspell.json  sanitize.cmake
algorithm/: CMakeLists.txt
algorithm/include/: common.h  heap.h  sort.h  vector.h
algorithm/src/: common.h  heap.h  sort.cpp  sort.h  vector.cpp  vector.h
algorithm/test/: test.cpp  test.h  test_heap.cc  test_heap.cpp  test_main.cc  test_main.cpp  test_sort.cc  test_sort.cpp  test_vector.cc  test_vector.cpp
cmake/: sanitize.cmake
common/: cxxver.h
convert/: CMakeLists.txt
convert/include/: common.h  numsys.h
convert/src/: numsys.cc  numsys.cpp
convert/test/: test.h  test_main.cc  test_main.cpp  test_numsys.cc  test_numsys.cpp
cplusplus/: CMakeLists.txt
cplusplus/include/collection/: iterator.hpp
cplusplus/include/iterator/: concept.h  concept.hpp  custom.hpp  dynamic_array.h  dynamic_array.hpp  iterator.h  iterator.hpp  utils.h  utils.hpp
cplusplus/include/oop/: affine_func.hpp  affine_ptr.hpp  casting.hpp  class.h  class.hpp  const.h  constructor.h  default.h  default.hpp  enumclass.h  function.h  inherit.h  inherit.hpp  initialize_list.h  initialize_list.hpp  new_delete.h  new_delete.hpp  operator.h  operator.hpp  union.h  unpack.h  unpack.hpp
cplusplus/include/ptr/: shared_ptr.hpp  smart_ptr.h  smart_ptr.hpp
cplusplus/include/range/: factories.h
cplusplus/include/reference/: forward.h  forward.hpp  left_ref.h  left_ref.hpp  move.h  move.hpp  ref.hpp  right_ref.h  right_ref.hpp
cplusplus/include/std/optional/: optional.hpp
cplusplus/include/std/utility/: functions.hpp
cplusplus/include/stl/optional/: func.h  optional.h
cplusplus/include/stl/utility/: functions.h  in_place.h
cplusplus/include/stl/variant/: overloaded.h
cplusplus/include/string/: string_view.h
cplusplus/include/template/: affine_func.h  affine_func.hpp  affine_ptr.h  affine_ptr.hpp  concept.h  concept.hpp  crtp.h  ctad.h  func.h  func.hpp  function.h  inf_generic_param.hpp  sfinae.h  sfinae.hpp  specialization.h  specialization.hpp  traits.hpp  type_detect.hpp  variadic.h  variadic.hpp
cplusplus/include/utility/: functions.hpp
cplusplus/src/oop/: class.cc  class.cpp  const.cc  constructor.cc  default.cc  default.cpp  enumclass.cc  function.cc  inherit.cc  inherit.cpp  new_delete.cc  new_delete.cpp  operator.cc  operator.cpp  union.cc
cplusplus/src/stl/optional/: func.cc
cplusplus/test/: test.h  test_main.cc  test_main.cpp
cplusplus/test/collection/: test_array.cc  test_array.cpp  test_iterator.cpp  test_pair.cpp  test_tuple.cc  test_tuple.cpp  test_vector.cc  test_vector.cpp
cplusplus/test/iterator/: test_category.cpp  test_concept.cc  test_concept.cpp  test_custom.cpp  test_iterator.cc  test_iterator.cpp  test_iterator_traits.cc  test_iterator_traits.cpp  test_utils.cc  test_utils.cpp
cplusplus/test/oop/: test_affine_func.cpp  test_affine_ptr.cpp  test_casting.cc  test_casting.cpp  test_class.cc  test_class.cpp  test_const.cc  test_const_1.cc  test_constructor.cc  test_default.cc  test_default.cpp  test_enumclass.cc  test_function.cc  test_inherit.cc  test_inherit.cpp  test_initialize_list.cc  test_initialize_list.cpp  test_new_delete.cc  test_new_delete.cpp  test_operator.cc  test_operator.cpp  test_union.cc  test_unpack.cc  test_unpack.cpp
cplusplus/test/ptr/: large_object.h  test_shared_ptr.cc  test_shared_ptr.cpp  test_unique_ptr.cc  test_unique_ptr.cpp  test_weak_ptr.cc  test_weak_ptr.cpp
cplusplus/test/range/: access.cc  factories.cc  test.h  test_access.cc  test_adaptors.cc  test_factories.cc  test_views.cc  view.cc  views.cc
cplusplus/test/reference/: test_forward.cc  test_forward.cpp  test_left_ref.cc  test_left_ref.cpp  test_move.cc  test_move.cpp  test_ref.cpp  test_right_ref.cc  test_right_ref.cpp
cplusplus/test/std/any/: test_any.cpp
cplusplus/test/std/optional/: test_optional.cpp
cplusplus/test/std/utility/: test_functions.cpp  test_in_place.cpp
cplusplus/test/stl/: person.h  type.h
cplusplus/test/stl/any/: test_any.cc  test_any_cast.cc  test_constructor.cc  test_make_any.cc  test_method.cc
cplusplus/test/stl/optional/: person.h  test_constructor.cc  test_make_optional.cc  test_method.cc  test_optional.cc
cplusplus/test/stl/tuple/: test_constructor.cc  test_make_tuple.cc  test_method.cc  test_tuple.cc
cplusplus/test/stl/utility/: test_functions.cc  test_in_place.cc
cplusplus/test/stl/variant/: test_constructor.cc  test_method.cc
cplusplus/test/string/: test_string_view.cc  test_string_view.cpp
cplusplus/test/template/: test_affine_func.cc  test_affine_func.cpp  test_affine_ptr.cc  test_affine_ptr.cpp  test_concept.cc  test_concept.cpp  test_crtp.cc  test_ctad.cc  test_func copy.cpp  test_func.cc  test_func.cpp  test_function.cc  test_inf_generic_param.cpp  test_info_generic_param.cpp  test_sfinae.cc  test_sfinae.cpp  test_specialization.cc  test_specialization.cpp  test_traits.cpp  test_type_detect.cpp  test_variadic.cc  test_variadic.cpp
cplusplus/test/utility/: test_functions.cpp
eigen/: README.md
hello/: CMakeLists.txt  main.cpp
linux/: CMakeLists.txt
linux/include/: io.h  process.h  thread.h
linux/src/io/: io_redirect.c  redirect.c
linux/src/process/: exec.c  fork.c  shared.c
linux/src/thread/: pthread.c
linux/test/: test_main.cc
linux/test/io/: test_redirect.cc
linux/test/process/: test_exec.cc  test_fork.cc
linux/test/thread/: test_pthread.cc
pearls/: cmakelists.txt
rust_lib/: CMakeLists.txt  Cargo.toml  README.md  build.rs  cxx-lib-copy.cmake  cxx-lib-link.cmake
rust_lib/include/: bindings.h
rust_lib/include/c/: func.h
rust_lib/src/: func.rs  lib.rs
rust_lib/src/c/: array.rs  enum.rs  func.rs  mod.rs  struct.rs  unwind.rs
rust_lib/src/cc/: array.rs  enum.rs  func.rs  mod.rs  struct.rs
rust_lib/src/rust/: mod.rs
rust_lib/test/: test_main.cc
rust_lib/test/c/: test_array.cc  test_enum.cc  test_func.cc  test_struct.cc
rust_lib/test/cc/: test_array.cc  test_enum.cc  test_func.cc  test_struct.cc
sort/: cmakelists.txt  (+1 more)
(+7 files in other folders)
